Adding more stuff

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,364 +1,7 @@
-absl-py==2.3.1
-actionlib==1.13.2
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.15
-aiohttp-cors==0.8.1
-aiosignal==1.4.0
-altair==5.5.0
-angles==1.9.13
-annotated-types==0.7.0
-anyio==4.9.0
-argon2-cffi==25.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-astor==0.8.1
-astroid==3.3.10
-asttokens==3.0.0
-async-lru==2.0.5
-attrs==25.3.0
-babel==2.17.0
-beautifulsoup4==4.13.4
-bidict==0.23.1
-black==25.1.0
-bleach==6.2.0
-blinker==1.9.0
-bondpy==1.8.5
-Brotli==1.1.0
-cachetools==5.5.2
-camera-calibration==1.15.2
-camera-calibration-parsers==1.12.0
-catkin==0.8.8
-certifi==2025.6.15
-cffi==1.17.1
-cfgv==3.4.0
-charset-normalizer==3.4.2
-click==8.2.1
-cloudpickle==3.1.1
-colorful==0.5.7
-comm==0.2.2
-ConfigArgParse==1.7.1
-controller-manager==0.19.2
-controller-manager-msgs==0.19.2
-coverage==7.10.2
-cryptography==45.0.6
-cupy-cuda12x==13.5.1
-cv-bridge==1.15.0
-debugpy==1.8.14
-decorator==5.2.1
-defusedxml==0.7.1
-diagnostic-analysis==1.10.0
-diagnostic-common-diagnostics==1.10.0
-diagnostic-updater==1.10.0
-dill==0.4.0
-distlib==0.3.9
-dm-tree==0.1.9
-dnspython==2.7.0
-dynamic_reconfigure==1.7.0
-email_validator==2.2.0
-executing==2.2.0
-Farama-Notifications==0.0.4
-fastapi==0.116.1
-fastapi-cli==0.0.8
-fastapi-cloud-cli==0.1.4
-fastjsonschema==2.21.1
-fastrlock==0.8.3
-filelock==3.18.0
-Flask==3.1.1
-flask-cors==6.0.1
-Flask-Login==0.6.3
-fqdn==1.5.1
-frozenlist==1.7.0
-fsspec==2025.5.1
-gazebo_plugins==2.9.1
-gazebo_ros==2.9.1
-gencpp==0.6.5
-geneus==3.0.0
-genlisp==0.4.18
-genmsg==0.5.16
-gennodejs==2.0.2
-genpy==0.6.14
-gevent==25.5.1
-geventhttpclient==2.3.4
-gitdb==4.0.12
-GitPython==3.1.45
-google-api-core==2.25.1
-google-auth==2.40.3
-googleapis-common-protos==1.70.0
-greenlet==3.2.3
-grpcio==1.74.0
-gymnasium==1.0.0
-h11==0.16.0
-hf-xet==1.1.5
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-huggingface-hub==0.33.2
-identify==2.6.12
-idna==3.10
-image-geometry==1.15.0
-importlib_metadata==8.7.0
-iniconfig==2.1.0
-interactive-markers==1.12.0
-ipykernel==6.29.5
-ipython==9.3.0
-ipython_pygments_lexers==1.1.1
-ipywidgets==8.1.7
-isoduration==20.11.0
-isort==6.0.1
-itsdangerous==2.2.0
-jedi==0.19.2
-Jinja2==3.1.6
-joblib==1.5.1
-joint_state_publisher==1.15.0
-joint_state_publisher_gui==1.15.0
-json5==0.12.0
-jsonpointer==3.0.0
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-jupyter_server==2.16.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.4.3
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.15
-laser_geometry==1.6.5
-linkify-it-py==2.0.3
-locust==2.37.14
-locust-cloud==1.26.3
-lz4==4.4.4
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib-inline==0.1.7
-mccabe==0.7.0
-mdit-py-plugins==0.5.0
-mdurl==0.1.2
-memray==1.18.0
-message-filters==1.15.8
-mistune==3.1.3
-mpmath==1.3.0
-msgpack==1.1.1
-multidict==6.6.4
-mypy==1.16.1
-mypy_extensions==1.1.0
-narwhals==2.0.0
-nb_mypy==1.0.6
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.5
-nodeenv==1.9.1
-notebook==7.4.3
-notebook_shim==0.2.4
-numpy==2.3.0
-nvidia-cublas-cu12==12.6.4.1
-nvidia-cuda-cupti-cu12==12.6.80
-nvidia-cuda-nvrtc-cu12==12.6.77
-nvidia-cuda-runtime-cu12==12.6.77
-nvidia-cudnn-cu12==9.5.1.17
-nvidia-cufft-cu12==11.3.0.4
-nvidia-cufile-cu12==1.11.1.6
-nvidia-curand-cu12==10.3.7.77
-nvidia-cusolver-cu12==11.7.1.2
-nvidia-cusparse-cu12==12.5.4.2
-nvidia-cusparselt-cu12==0.6.3
-nvidia-nccl-cu12==2.26.2
-nvidia-nvjitlink-cu12==12.6.85
-nvidia-nvtx-cu12==12.6.77
-opencensus==0.11.4
-opencensus-context==0.1.3
-opentelemetry-api==1.36.0
-opentelemetry-exporter-prometheus==0.57b0
-opentelemetry-proto==1.36.0
-opentelemetry-sdk==1.36.0
-opentelemetry-semantic-conventions==0.57b0
-ormsgpack==1.7.0
-overrides==7.7.0
-packaging==25.0
-pandas==2.3.0
-pandocfilters==1.5.1
-parso==0.8.4
-pathspec==0.12.1
-pexpect==4.9.0
-pillow==11.3.0
-platformdirs==4.3.8
-pluggy==1.6.0
-postcell==0.1.4
-pre_commit==4.2.0
-prometheus_client==0.22.1
-prompt_toolkit==3.0.51
-propcache==0.3.2
-proto-plus==1.26.1
-protobuf==6.31.1
-psutil==7.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-py-spy==0.4.1
-pyarrow==21.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-pydantic==2.11.7
-pydantic_core==2.33.2
-pydeck==0.9.1
-Pygments==2.19.2
-pylint==3.3.7
-pyOpenSSL==25.1.0
-pytest==8.4.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.1
-python-engineio==4.12.2
-python-json-logger==3.3.0
-python-multipart==0.0.20
-python-qt-binding==0.4.3
-python-socketio==5.13.0
-pytz==2025.2
-PyYAML==6.0.2
-pyzmq==27.0.0
-qt-dotgraph==0.4.2
-qt-gui==0.4.2
-qt-gui-cpp==0.4.2
-qt-gui-py-common==0.4.2
-ray==2.48.0
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.4
-resource_retriever==1.12.6
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==14.0.0
-rich-toolkit==0.14.8
-rignore==0.6.2
-rosbag==1.15.8
-rosboost-cfg==1.15.6
-rosclean==1.15.6
-roscreate==1.15.6
-rosgraph==1.15.8
-roslaunch==1.15.8
-roslib==1.15.6
-roslint==0.12.0
-roslz4==1.15.8
-rosmake==1.15.6
-rosmaster==1.15.8
-rosmsg==1.15.8
-rosnode==1.15.8
-rosparam==1.15.8
-rospy==1.15.8
-rosservice==1.15.8
-rostest==1.15.8
-rostopic==1.15.8
-rosunit==1.15.6
-roswtf==1.15.8
-rpds-py==0.25.1
-rqt-moveit==0.5.9
-rqt-reconfigure==0.5.3
-rqt-robot-dashboard==0.5.8
-rqt-robot-monitor==0.5.12
-rqt-rviz==0.6.1
-rqt_action==0.4.9
-rqt_bag==0.4.15
-rqt_bag_plugins==0.4.15
-rqt_console==0.4.11
-rqt_dep==0.4.10
-rqt_graph==0.4.14
-rqt_gui==0.5.2
-rqt_gui_py==0.5.2
-rqt_image_view==0.4.16
-rqt_launch==0.4.8
-rqt_logger_level==0.4.11
-rqt_msg==0.4.9
-rqt_nav_view==0.5.7
-rqt_plot==0.4.12
-rqt_pose_view==0.5.10
-rqt_publisher==0.4.9
-rqt_py_common==0.5.2
-rqt_py_console==0.4.9
-rqt_robot_steering==0.5.11
-rqt_runtime_monitor==0.5.8
-rqt_service_caller==0.4.9
-rqt_shell==0.4.10
-rqt_srv==0.4.8
-rqt_tf_tree==0.6.1
-rqt_top==0.4.9
-rqt_topic==0.4.12
-rqt_web==0.4.9
-rsa==4.9.1
-rviz==1.14.1
-safetensors==0.5.3
-scikit-learn==1.5.2
-scipy==1.16.0
-Send2Trash==1.8.3
-sensor-msgs==1.13.0
-sentence-transformers==5.0.0
-sentry-sdk==2.32.0
-setuptools==78.1.1
-shellingham==1.5.4
-simple-websocket==1.1.0
-six==1.17.0
-smach==2.5.0
-smach-ros==2.5.0
-smart_open==7.3.0.post1
-smclib==1.8.5
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.7
-stack-data==0.6.3
-starlette==0.47.1
-streamlit==1.47.1
-sympy==1.14.0
-tenacity==9.1.2
-tensorboardX==2.6.4
-terminado==0.18.1
-textual==5.3.0
-tf==1.13.2
-tf-conversions==1.13.2
-tf2-geometry-msgs==0.7.3
-tf2-kdl==0.7.3
-tf2-py==0.7.3
-tf2-ros==0.7.3
-threadpoolctl==3.6.0
-tinycss2==1.4.0
-tokenizers==0.21.2
-toml==0.10.2
-tomlkit==0.13.3
-topic-tools==1.15.8
-torch==2.7.1
-tornado==6.5.1
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.53.1
-triton==3.3.1
-typer==0.16.0
-types-python-dateutil==2.9.0.20250516
-typing-inspection==0.4.1
-typing_extensions==4.14.0
-tzdata==2025.2
-uc-micro-py==1.0.3
-uri-template==1.3.0
-urllib3==2.4.0
-uvicorn==0.35.0
-uvloop==0.21.0
-virtualenv==20.31.2
-watchdog==6.0.0
-watchfiles==1.1.0
-wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==15.0.1
-Werkzeug==3.1.3
-wheel==0.45.1
-widgetsnbextension==4.0.14
-wrapt==1.17.2
-wsproto==1.2.0
-xacro==1.14.4
-yarl==1.20.1
-zipp==3.23.0
-zope.event==5.1.1
-zope.interface==7.2
+fastapi
+uvicorn[standard]
+streamlit
+requests
+joblib
+pytest
+sentence-transformers
