--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -15,29 +15,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      
-      - name: Run pylint
-        run: |
-          python -m pylint .
-
-      - name: Run pytest
-        run: |
-          python -m pytest tests/
-
       - name: Extract Docker image metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ vars.DOCKER_USERNAME }}/fastapi-streamlit
+          images: ${{ vars.DOCKER_USERNAME }}/final_app
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
@@ -53,8 +35,8 @@ jobs:
         with:
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
-            ${{ vars.DOCKER_USERNAME }}/fastapi-streamlit:${{ env.TIMESTAMP }}
-            ${{ vars.DOCKER_USERNAME }}/fastapi-streamlit:latest
+            ${{ vars.DOCKER_USERNAME }}/final_app:${{ env.TIMESTAMP }}
+            ${{ vars.DOCKER_USERNAME }}/final_app:latest
           annotations: ${{ steps.meta.outputs.annotations }}
           provenance: true
           sbom: true
