--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -19,13 +19,13 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ vars.DOCKER_USERNAME }}/final_app
+          images: ${{ secrets.DOCKER_USERNAME }}/final_app
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKER_USERNAME }}
-          password: ${{ vars.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -35,8 +35,8 @@ jobs:
         with:
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
-            ${{ vars.DOCKER_USERNAME }}/final_app:${{ env.TIMESTAMP }}
-            ${{ vars.DOCKER_USERNAME }}/final_app:latest
+            ${{ secrets.DOCKER_USERNAME }}/final_app:${{ env.TIMESTAMP }}
+            ${{ secrets.DOCKER_USERNAME }}/final_app:latest
           annotations: ${{ steps.meta.outputs.annotations }}
           provenance: true
           sbom: true
