--- a/.github/workflows/docker-deploy.yaml
+++ b/.github/workflows/docker-deploy.yaml
@@ -3,8 +3,8 @@ on:
   workflow_run:
     # This GitHub Action depends on another, which package up docker and pushes it to a  docker repo
     workflows: ["Build and Push Docker Image"]
-    types:
-      - completed
+    types: [completed]
+  workflow_dispatch:   
 
 jobs:
   deploy:
