--- a/.github/workflows/docker-deploy.yaml
+++ b/.github/workflows/docker-deploy.yaml
@@ -22,4 +22,4 @@ jobs:
             docker pull ${{ secrets.DOCKER_USERNAME }}/final_app:latest
             docker stop ${{ secrets.DOCKER_USERNAME }}/final_app || true
             docker rm ${{ secrets.DOCKER_USERNAME }}/final_app || true
-            docker run -d -p 8010:8010 ${{ secrets.DOCKER_USERNAME }}/final_app:latest
+            docker run -d --name ${{ secrets.DOCKER_USERNAME }}/final_app -v /opt/assignment_outputs:/app/data ${{ secrets.DOCKER_USERNAME }}/final_app:latest
