--- a/.github/workflows/docker-deploy.yaml
+++ b/.github/workflows/docker-deploy.yaml
@@ -20,6 +20,6 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             docker pull ${{ secrets.DOCKER_USERNAME }}/final_app:latest
-            docker stop ${{ secrets.DOCKER_USERNAME }}/final-app || true
-            docker rm ${{ secrets.DOCKER_USERNAME }}/final-app || true
-            docker run -d --name ${{ secrets.DOCKER_USERNAME }}/final_app -v /opt/assignment_outputs:/app/data ${{ secrets.DOCKER_USERNAME }}/final_app:latest
+            docker stop final_app || true
+            docker rm final_app || true
+            docker run -d --name final_app -p 8010:8010 ${{ secrets.DOCKER_USERNAME }}/final_app:latest
